--- a/MarketPlace.Infrastructure.IntegrationTest/appsettings.json
+++ b/MarketPlace.Infrastructure.IntegrationTest/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Server=localhost\\SQLEXPRESS;Database=marketplace;Trusted_Connection=True;TrustServerCertificate=True;"
+    "SqlServer": "Server=localhost\\SQLEXPRESS;Database=marketplace-test;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
