Repositories 1. Infrastructure: Generic repository base with generic functionalities created; Inherited repositories for each entity created. 2. Application: Generic abstraction of repository created; Inherited abstractions of repositories for each entity created. 3. Repositories DI registration.

--- a/MarketPlace.Application/MarketPlace.Application.csproj
+++ b/MarketPlace.Application/MarketPlace.Application.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Dtos\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MarketPlace.Domain\MarketPlace.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
