--- a/MarketPlace.Infrastructure/MarketPlace.Infrastructure.csproj
+++ b/MarketPlace.Infrastructure/MarketPlace.Infrastructure.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MarketPlace.Application\MarketPlace.Application.csproj" />
     <ProjectReference Include="..\MarketPlace.Domain\MarketPlace.Domain.csproj" />
   </ItemGroup>
 
