Integraton tests 1. Integration tests of the repositories. 2. Changes in domain for errors detected in integration tests. 3. Changes in domain unit tests in order to leave them funcional with the domain fixes. 4. Database migrations. 5. Little refactor in DbContext.

--- a/MarketPlace.Infrastructure.IntegrationTest/MarketPlace.Infrastructure.IntegrationTest.csproj
+++ b/MarketPlace.Infrastructure.IntegrationTest/MarketPlace.Infrastructure.IntegrationTest.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="FluentAssertions" Version="8.8.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
@@ -31,6 +32,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MarketPlace.Infrastructure\MarketPlace.Infrastructure.csproj" />
+    <ProjectReference Include="..\MarketPlace.Shared\MarketPlace.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
