--- a/MarketPlace.Application/MarketPlace.Application.csproj
+++ b/MarketPlace.Application/MarketPlace.Application.csproj
@@ -8,6 +8,18 @@
 
   <ItemGroup>
     <Folder Include="Dtos\" />
+    <Folder Include="Features\CartItems\" />
+    <Folder Include="Features\Orders\" />
+    <Folder Include="Features\Products\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="16.0.0" />
+    <PackageReference Include="FluentValidation" Version="12.1.1" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
+    <PackageReference Include="MediatR" Version="14.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.1" />
   </ItemGroup>
 
   <ItemGroup>
